--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,16 +6,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # 1. 升级 Checkout 到 v4
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
+      # 2. 升级 Go 环境配置到 v5
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.21'
 
+      # 3. 升级 Java 环境配置到 v4
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -23,6 +26,7 @@ jobs:
       - name: Setup Android NDK
         uses: android-actions/setup-android@v3
       
+      # 确保安装特定版本的 NDK (gomobile 兼容性较好)
       - name: Install Android NDK
         run: sdkmanager "ndk;25.2.9519653"
 
@@ -37,8 +41,8 @@ jobs:
           mkdir -p xray_bridge
           cd xray_bridge
           go mod init xray_bridge
+          # 拉取 xray core
           go get github.com/xtls/xray-core@v1.8.4
-          # 注意：这里使用的是 v1.8.4 左右的版本，你可以根据需要修改 tag
           
           # 创建 lib.go
           cat <<EOF > lib.go
@@ -67,10 +71,12 @@ jobs:
       - name: Build AAR
         run: |
           cd xray_bridge
-          gomobile bind -target=android -o ../libxray.aar .
+          gomobile bind -target=android -androidapi 21 -o ../libxray.aar .
 
+      # 4. 关键修复：升级 Artifact 上传插件到 v4
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: libxray-aar
           path: libxray.aar
+          compression-level: 0 # 不压缩，直接上传
