--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,17 +6,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # 1. 升级 Checkout 到 v4
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. 升级 Go 环境配置到 v5
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.21'
 
-      # 3. 升级 Java 环境配置到 v4
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
@@ -26,11 +23,10 @@ jobs:
       - name: Setup Android NDK
         uses: android-actions/setup-android@v3
       
-      # 确保安装特定版本的 NDK (gomobile 兼容性较好)
       - name: Install Android NDK
         run: sdkmanager "ndk;25.2.9519653"
 
-      - name: Install Gomobile
+      - name: Install Gomobile Tool
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
@@ -41,8 +37,15 @@ jobs:
           mkdir -p xray_bridge
           cd xray_bridge
           go mod init xray_bridge
-          # 拉取 xray core
+          
+          # 1. 拉取 xray core
           go get github.com/xtls/xray-core@v1.8.4
+          
+          # 2. >>> 关键修复：显式拉取 mobile bind 依赖 <<<
+          go get golang.org/x/mobile/bind
+          
+          # 3. 整理依赖
+          go mod tidy
           
           # 创建 lib.go
           cat <<EOF > lib.go
@@ -71,12 +74,12 @@ jobs:
       - name: Build AAR
         run: |
           cd xray_bridge
-          gomobile bind -target=android -androidapi 21 -o ../libxray.aar .
+          # 添加 -v 参数可以看到更详细的日志，方便排错
+          gomobile bind -v -target=android -androidapi 21 -o ../libxray.aar .
 
-      # 4. 关键修复：升级 Artifact 上传插件到 v4
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: libxray-aar
           path: libxray.aar
-          compression-level: 0 # 不压缩，直接上传
+          compression-level: 0
